Refaster, format, documentation, and JVM fix
The JVM for Java21 could not handle the pattern matching in AssignmentToPathAllocator. Therefore, I revert it to if-then-else checks